Revert "Merge pull request #5 from CodeForAfricaLabs/fix/chart-qualifier-spacing"
This reverts commit 711cf34b1b59cd247b6e0eef25184d2c26cbee62, reversing
changes made to 5b3a0e74084b67bcd211a7ed5e6fcad6a8ffb658.

--- a/wazimap/static/css/_charts.scss
+++ b/wazimap/static/css/_charts.scss
@@ -19,7 +19,6 @@ uncomment for separate inclusion into embed iframes */
     float: left;
     display: block;
     margin: 0 .5em;
-    padding-top: 1em;
 }
 .census-chart-embed {
     position: relative;
